--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
   "resolutions": {
     "@haiku/core": "^5.0.0",
     "**/@types/react": "15.6.11",
-    "@types/node": "10.12.30"
+    "@types/node": "^18.18.6"
+  },
+  "engines": {
+    "node": ">=18.18.0",
+    "yarn": ">=1.22.19"
   },
   "dependencies": {
     "@haiku/cli": "5.1.2",
@@ -56,16 +60,16 @@
     "async": "^2.5.0",
     "aws-sdk": "^2.85.0",
     "cli-color": "^1.2.0",
-    "cross-env": "^5.1.6",
-    "cross-spawn": "^6.0.5",
+    "cross-env": "^7.0.3",
+    "cross-spawn": "^7.0.3",
     "dependency-graph": "^0.5.0",
     "derequire": "^2.0.6",
     "dotenv": "^5.0.1",
-    "electron": "2.0.8",
-    "electron-builder": "21.2.0",
-    "electron-notarize": "^0.3.0",
-    "electron-rebuild": "^1.8.4",
-    "fs-extra": "^4.0.2",
+    "electron": "^22.3.27",
+    "electron-builder": "^24.6.4",
+    "electron-notarize": "^2.1.0",
+    "electron-rebuild": "^3.2.9",
+    "fs-extra": "^11.2.0",
     "git-branch": "0.3.0",
     "glob": "^7.1.2",
     "glob-all": "3.1.0",
@@ -73,16 +77,16 @@
     "inquirer": "^3.0.6",
     "lodash": "^4.17.4",
     "mime-types": "^2.1.17",
-    "moment": "2.18.1",
-    "node-gyp": "^3.6.3",
+    "moment": "^2.29.4",
+    "node-gyp": "^9.4.0",
     "semver": "^5.4.1",
     "semver-sort": "^0.0.4",
     "slack": "^8.3.1",
-    "spectron": "^3.7.2",
+    "spectron": "^15.0.0",
     "tap-spec": "^4.1.2",
     "tape": "^4.9.0",
     "tsc-watch": "^1.0.27",
-    "typescript": "^3.0.3",
+    "typescript": "^4.9.5",
     "uglify-es": "^3.3.2",
     "uglify-js": "^3.1.4",
     "webpack": "^4.16.0",
@@ -103,7 +107,7 @@
     "nodeGypRebuild": false,
     "productName": "Haiku",
     "forceCodeSigning": true,
-    "electronVersion": "2.0.8",
+    "electronVersion": "22.3.27",
     "afterSign": "scripts/notarize.js",
     "mac": {
       "category": "public.app-category.developer-tools",
