--- a/packages/haiku-plumbing/package.json
+++ b/packages/haiku-plumbing/package.json
@@ -27,10 +27,10 @@
     "@haiku/sdk-client": "5.1.2",
     "@haiku/sdk-inkstone": "5.1.2",
     "@ronomon/base64": "^2.4.1",
-    "async": "^2.5.0",
-    "chokidar": "^1.7.0",
+    "async": "^3.2.5",
+    "chokidar": "^3.5.3",
     "dedent": "^0.7.0",
-    "fs-extra": "^4.0.2",
+    "fs-extra": "^11.2.0",
     "haiku-common": "5.1.2",
     "haiku-formats": "5.1.2",
     "haiku-fs-extra": "5.1.2",
@@ -45,8 +45,8 @@
     "lodash.foreach": "^4.5.0",
     "lodash.merge": "4.6.0",
     "lodash.throttle": "4.1.1",
-    "moment": "2.18.1",
-    "nodegit": "0.20.3",
+    "moment": "^2.29.4",
+    "nodegit": "^0.28.0",
     "qs": "6.4.0",
     "raven": "2.3.0",
     "rollup": "^0.53.3",
@@ -57,28 +57,28 @@
     "rollup-plugin-uglify-es": "^0.0.1",
     "semver": "^5.4.1",
     "tmp": "0.0.31",
-    "ws": "3.2.0",
+    "ws": "^8.17.0",
     "yargs": "^6.6.0"
   },
   "devDependencies": {
     "@types/es6-promise": "^3.3.0",
-    "@types/fs-extra": "^4.0.8",
+    "@types/fs-extra": "^11.0.1",
     "@types/semver": "^5.4.1",
-    "cross-env": "^5.1.6",
-    "electron": "2.0.8",
+    "cross-env": "^7.0.3",
+    "electron": "^22.3.27",
     "haiku-creator": "5.1.2",
     "haiku-testing": "5.1.2",
     "istanbul-reporter-cobertura-haiku": "^1.0.2",
     "leaked-handles": "^5.2.0",
-    "nyc": "^13.0.1",
-    "spectron": "^3.8.0",
+    "nyc": "^15.1.0",
+    "spectron": "^15.0.0",
     "tap-spec": "^4.1.2",
     "tape": "^4.9.0",
     "tmp": "0.0.31",
-    "ts-node": "^6.1.0",
-    "tsconfig-paths": "^3.3.2",
-    "tslint": "^5.11.0",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "tslint": "^6.1.3",
     "tslint-config-haiku": "^1.0.16",
-    "typescript": "^3.0.3"
+    "typescript": "^4.9.5"
   }
 }
