--- a/packages/haiku-sdk-creator/package.json
+++ b/packages/haiku-sdk-creator/package.json
@@ -27,21 +27,21 @@
     "haiku-common": "5.1.2",
     "haiku-serialization": "5.1.2",
     "qs": "6.4.0",
-    "ws": "3.2.0"
+    "ws": "^8.17.0"
   },
   "devDependencies": {
-    "@types/ws": "^3.0.2",
-    "cross-env": "^5.1.6",
+    "@types/ws": "^8.5.9",
+    "cross-env": "^7.0.3",
+    "haiku-testing": "5.1.2",
     "istanbul-reporter-cobertura-haiku": "^1.0.2",
-    "nyc": "^13.0.1",
+    "leaked-handles": "^5.2.0",
+    "nyc": "^15.1.0",
     "tap-spec": "^4.1.2",
     "tape": "^4.9.0",
-    "ts-node": "^6.1.0",
-    "tsconfig-paths": "^3.3.2",
-    "tslint": "^5.11.0",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "tslint": "^6.1.3",
     "tslint-config-haiku": "^1.0.16",
-    "typescript": "^3.0.3",
-    "leaked-handles": "^5.2.0",
-    "haiku-testing": "5.1.2"
+    "typescript": "^4.9.5"
   }
 }
